--- a/views/airports/index.ejs
+++ b/views/airports/index.ejs
@@ -1,20 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Airports</title>
-</head>
-<body>
+<% layout('layouts/boilerplate.ejs') %> 
     <h1>All Airports</h1>
     <div>
         <a href="/airports/new">Add Airport</a>
     </div>
-    <ul>
-        <% for (let airport of airports) { %> 
-            <li><a href="/airports/<%=airport._id%>"><%= airport.name %></a></li>
-        <% } %> 
-    </ul>
-</body>
-</html>
+<% for (let airport of airports) { %> 
+    <div class="card mb-3">
+        <div class="row">
+            <div class="col-md-4">
+                <img class="img-fluid" src="<%= airport.image %>" alt="">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title"><%= airport.name %></h5>
+                    <p class="card-text"><%= airport.description %></p>
+                    <p class="card-text text-muted"><%= airport.location%></p>
+                    <a href="/airports/<%=airport._id%>" class="btn btn-primary">View <%= airport.name %></a>
+                </div>
+            </div>
+        </div>
+    </div>
+<% } %> 
