--- a/views/airports/new.ejs
+++ b/views/airports/new.ejs
@@ -1,27 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Airport</title>
-</head>
-<body>
-    <form action="/airports" method="POST">
-        <div>
-            <label for="name">Name</label>
-            <input type="text" name="airport[name]" id="name">
-        </div>
-        <div>
-            <label for="location">Location</label>
-            <input type="text" name="airport[location]" id="location">
-        </div>
-        <div>
-            <label for="description">Description</label>
-            <input type="text" name="airport[description]" id="description">
-        </div>
-        <button>Add Airport</button>
-    </form>
-    <a href="/airports">All Airports</a>
-</body>
-</html>
+<% layout('layouts/boilerplate.ejs') %> 
+<div class="row">
+    <h1 class="text-center">New Airport</h1>
+    <div class="col-6 offset-3">
+        <form action="/airports" method="POST">
+            <div class="mb-3">
+                <label class="form-label" for="name">Name</label>
+                <input class="form-control" type="text" name="airport[name]" id="name">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="location">Location</label>
+                <input class="form-control" type="text" name="airport[location]" id="location">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="image">Image Url</label>
+                <input class="form-control" type="text" name="airport[image]" id="image">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="description">Description</label>
+                <textarea class="form-control" type="text" name="airport[description]" id="description"></textarea>
+            </div>
+            <div class="mb-3">
+                <button class="btn btn-success">Add Airport</button>
+            </div>
+        </form>
+        <a href="/airports">All Airports</a>
+    </div>
+</div>
