--- a/views/airports/show.ejs
+++ b/views/airports/show.ejs
@@ -1,24 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show Airport</title>
-</head>
-<body>
-    <h1><%= airport.name%></h1>
-    <h2><%= airport.location%></h2>
-    <p>
-        <a href="/airports/<%=airport._id%>/edit">Edit</a>
-    </p>
-    <p>
-        <form action="/airports/<%=airport._id%>?_method=DELETE" method="POST">
-            <button>Delete</button>
-        </form>
-    </p>
-    <footer>
-        <a href="/airports">All Airports</a>
-    </footer>
-</body>
-</html>
+<% layout('layouts/boilerplate.ejs') %> 
+<div class="row">
+    <div class="col-6 offset-3">
+        <div class="card mb-3">
+            <img src="<%=airport.image%>" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"><%=airport.name%></h5>
+              <p class="card-text"><%=airport.description%></p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item text-muted"><%=airport.location%></li>
+            </ul>
+            <div class="card-body">
+              <a href="/airports/<%=airport._id%>/edit" class="card-link btn btn-info text-white">Edit</a>
+              <form class="d-inline" action="/airports/<%=airport._id%>?_method=DELETE" method="POST">
+                <button class="btn btn-danger">Delete</button>
+            </form>
+            </div>
+            <div class="card-footer text-muted">
+                2 days ago
+            </div>
+        </div>
+    </div>
+</div>
