--- a/views/airports/new.ejs
+++ b/views/airports/new.ejs
@@ -2,22 +2,22 @@
 <div class="row">
     <h1 class="text-center">New Airport</h1>
     <div class="col-6 offset-3">
-        <form action="/airports" method="POST">
+        <form action="/airports" method="POST" novalidate class="validated-form">
             <div class="mb-3">
                 <label class="form-label" for="name">Name</label>
-                <input class="form-control" type="text" name="airport[name]" id="name">
+                <input class="form-control" type="text" name="airport[name]" id="name" required>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
-                <input class="form-control" type="text" name="airport[location]" id="location">
+                <input class="form-control" type="text" name="airport[location]" id="location" required>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="image">Image Url</label>
-                <input class="form-control" type="text" name="airport[image]" id="image">
+                <input class="form-control" type="text" name="airport[image]" id="image" required>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
-                <textarea class="form-control" type="text" name="airport[description]" id="description"></textarea>
+                <textarea class="form-control" type="text" name="airport[description]" id="description" required></textarea>
             </div>
             <div class="mb-3">
                 <button class="btn btn-success">Add Airport</button>
