--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,6 +10,14 @@
           <a class="nav-link" href="/airports">Airports</a>
           <a class="nav-link" href="/airports/new">New Airport</a>
         </div>
+        <div class="navbar-nav ms-auto">
+          <% if(!currentUser) { %> 
+            <a href="/login" class="nav-link">Login</a>
+            <a href="/register" class="nav-link">Register</a>
+          <% } else { %> 
+            <a href="/logout" class="nav-link">Logout</a>
+          <% } %> 
+        </div>
       </div>
     </div>
   </nav>
