--- a/views/airports/show.ejs
+++ b/views/airports/show.ejs
@@ -9,19 +9,23 @@
             </div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item text-muted"><%=airport.location%></li>
+              <li class="list-group-item">Submitted by <%=airport.author.username%></li>
             </ul>
+            <% if(currentUser && airport.author.equals(currentUser._id)) { %> 
             <div class="card-body">
               <a href="/airports/<%=airport._id%>/edit" class="card-link btn btn-info text-white">Edit</a>
               <form class="d-inline" action="/airports/<%=airport._id%>?_method=DELETE" method="POST">
                 <button class="btn btn-danger">Delete</button>
             </form>
             </div>
+            <% } %> 
             <div class="card-footer text-muted">
                 2 days ago
             </div>
         </div>
     </div>
     <div class="col-6">
+      <% if(currentUser) { %> 
       <h2>Leave a Review</h2>
         <form action="/airports/<%=airport._id%>/reviews" method="POST" class="mb-3 validated-form" novalidate>
           <div class="mb-3">
@@ -34,14 +38,18 @@
           </div>
           <button class="btn btn-success">Submit</button>
         </form>
+        <% } %> 
         <% for(let review of airport.reviews) { %> 
           <div class="card mb-3">
             <div class="card-body">
               <h5 class="card-title">Rating: <%=review.rating%></h5>
+              <h6 class="card-subtitle mb-2 text-muted">By <%= review.author.username%></h6>
               <p class="card-text">Review: <%=review.body%></p>
+              <%  if( currentUser && review.author.equals(currentUser._id))  {%>
               <form action="/airports/<%=airport._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
                 <button class="btn btn-sm btn-danger">Delete</button>
               </form>
+              <% } %> 
             </div>
           </div>
         <% } %> 
