--- a/views/airports/index.ejs
+++ b/views/airports/index.ejs
@@ -7,7 +7,7 @@
     <div class="card mb-3">
         <div class="row">
             <div class="col-md-4">
-                <img class="img-fluid" src="<%= airport.image %>" alt="">
+                <img class="img-fluid" src="<%= airport.images[0].url%>" alt="">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
@@ -19,4 +19,4 @@
             </div>
         </div>
     </div>
-<% } %> 
+<% } %>  
