--- a/views/airports/new.ejs
+++ b/views/airports/new.ejs
@@ -2,7 +2,7 @@
 <div class="row">
     <h1 class="text-center">New Airport</h1>
     <div class="col-6 offset-3">
-        <form action="/airports" method="POST" novalidate class="validated-form">
+        <form action="/airports" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="name">Name</label>
                 <input class="form-control" type="text" name="airport[name]" id="name" required>
@@ -12,8 +12,8 @@
                 <input class="form-control" type="text" name="airport[location]" id="location" required>
             </div>
             <div class="mb-3">
-                <label class="form-label" for="image">Image Url</label>
-                <input class="form-control" type="text" name="airport[image]" id="image" required>
+                <label for="image" class="form-label">Choose image(s)...</label>
+                <input class="form-control" type="file" id="image" name="image" multiple>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
