--- a/views/airports/show.ejs
+++ b/views/airports/show.ejs
@@ -2,8 +2,26 @@
 <link rel="stylesheet" href="/stylesheets/stars.css">
 <div class="row">
     <div class="col-6">
-        <div class="card mb-3">
-            <img src="<%=airport.image%>" class="card-img-top" alt="...">
+      <div id="airportCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <% airport.images.forEach((img, i) => {  %>
+            <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
+                <img src="<%= img.url%>" class="d-block w-100" alt="">
+            </div>
+            <% }) %>
+        </div>
+        <% if(airport.images.length > 1) {%>
+        <button class="carousel-control-prev" type="button" data-bs-target="#airportCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#airportCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+        <% } %>
+      </div>
+        <div class="card mb-3"> 
             <div class="card-body">
               <h5 class="card-title"><%=airport.name%></h5>
               <p class="card-text"><%=airport.description%></p>
