--- a/views/airports/show.ejs
+++ b/views/airports/show.ejs
@@ -44,6 +44,7 @@
         </div>
     </div>
     <div class="col-6">
+      <div id='map' style='width: 100%; height: 300px;'></div>
       <% if(currentUser) { %> 
       <h2>Leave a Review</h2>
         <form action="/airports/<%=airport._id%>/reviews" method="POST" class="mb-3 validated-form" novalidate>
@@ -86,3 +87,9 @@
         <% } %> 
     </div>
 </div>
+
+<script>
+  const mapToken = '<%-process.env.MAPBOX_TOKEN%>'
+  const airport = <%- JSON.stringify(airport) %>
+</script>
+<script src="/javascripts/showPageMap.js"></script>
