Added cluster map to index

--- a/views/airports/index.ejs
+++ b/views/airports/index.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate.ejs') %> 
+<div id="map" style="width: 100%; height: 500px"></div>
 <h1>All Airports</h1>
 <div>
     <a href="/airports/new">Add Airport</a>
@@ -32,3 +33,12 @@
         </div>
     </div>
 <% } %>  
+
+<script>
+    const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+    const airports = { features: <%- JSON.stringify(airports) %>}
+</script>
+
+
+
+<script src="/javascripts/clusterMap.js"></script> 
