--- a/views/airports/index.ejs
+++ b/views/airports/index.ejs
@@ -1,9 +1,6 @@
 <% layout('layouts/boilerplate.ejs') %> 
-<div id="map" style="width: 100%; height: 500px"></div>
+<div id="cluster-map"></div>
 <h1>All Airports</h1>
-<div>
-    <a href="/airports/new">Add Airport</a>
-</div>
 
 <!-- <div class="row">
     <div class="col-md-6 offset-3 my-3">
