--- a/views/airports/show.ejs
+++ b/views/airports/show.ejs
@@ -44,7 +44,7 @@
         </div>
     </div>
     <div class="col-6">
-      <div id='map' style='width: 100%; height: 300px;'></div>
+      <div id='map'></div>
       <% if(currentUser) { %> 
       <h2>Leave a Review</h2>
         <form action="/airports/<%=airport._id%>/reviews" method="POST" class="mb-3 validated-form" novalidate>
